--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "babel-loader": "^9.2.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
