--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "sass-loader": "^16.0.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "css-loader": "^7.1.2",
     "sass": "^1.78.0",
-    "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0"
   }
 }
