--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "build": "npx webpack --mode production"
+    "build": "npx webpack --mode production",
+    "dev": "webpack serve --mode development --open"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,14 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "sass": "^1.78.0",
-    "style-loader": "^4.0.0"
+    "axios": "^1.7.7"
   }
 }
